<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".fragments.ProductDetailFragment">


        <TextView
            android:id="@+id/product_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/product_image_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_s_image"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="@id/product_title_tv"
            app:layout_constraintStart_toStartOf="@id/product_title_tv"
            app:layout_constraintTop_toBottomOf="@id/product_title_tv" />

        <TextView
            android:layout_marginTop="24dp"
            android:id="@+id/product_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/product_image_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/product_category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            app:layout_constraintBottom_toBottomOf="@+id/product_price_tv"
            app:layout_constraintEnd_toStartOf="@+id/product_price_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/product_price_tv" />

        <TextView
            android:id="@+id/product_description_tv"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_price_tv"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>